[package]
name = "vis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
itertools = "0.10.5"
proconio = "0.4.5"
superslice = "1.0.0"
rand = "0.7.3"
rand_chacha = "0.2.2"
svg = "0.13.1"